# MiR200-with-UR5

./: .gitignore
control_ur5_test/: CMakeLists.txt  package.xml
control_ur5_test/launch/: attach_robot0_to_block.launch  attach_robot1_to_block.launch  control_robot0_ur5_test.launch  control_robot1_ur5_test.launch  demo.launch  spawn_block.launch  spawn_separated_block.launch
control_ur5_test/src/: control_ur5_test_node.cpp
control_ur5_test/urdf/: block.urdf  separated_block.urdf.xacro
mir_ur5/: CMakeLists.txt  package.xml
mir_ur5/launch/: mir_ur5.launch  spawn_object.launch  spawn_robot0.launch  spawn_robot1.launch  spawn_robots.launch  start_moveit.launch  system_sim.launch
mir_ur5/scripts/: launch_ur5_controller.sh  spawn_robots.sh  system_sim.sh
mir_ur5_description/: CMakeLists.txt  package.xml
mir_ur5_description/config/: cartesian_compliance_controller.yaml  compliance_hw_config.yaml  diffdrive_controller.yaml  joint_to_cartesian_controller.yaml  velocity_controller.yaml
mir_ur5_description/urdf/: mir_200_v1.urdf.xacro  mir_ur5.urdf.xacro  ur.gazebo.xacro  ur5_robot.urdf.xacro
mir_ur5_description/urdf/include/: bumper.gazebo.xacro  contact_sensor.gazebo.xacro  imu.gazebo.urdf.xacro  mir_200.gazebo.xacro  sick_s300.urdf.xacro
mir_ur5_gazebo/: CMakeLists.txt  package.xml
mir_ur5_gazebo/config/: ekf.yaml  (+1 more)
mir_ur5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
mir_ur5_msgs/: CMakeLists.txt  package.xml
mir_ur5_navigation/: CMakeLists.txt  package.xml
optimal_position_calculator/: CMakeLists.txt  optimal_position_calculator.py  package.xml  urdf_reader.py
ur5_controller/: CMakeLists.txt  package.xml
urdf_form_creator/: CMakeLists.txt  package.xml  urdf_form_creator.py
(+46 files in other folders)
